# RayTracingRenderer

./: .gitignore  .gitmodules  CMakeLists.txt
includes/main_project/: Camera.hpp  Common.hpp  Ray.hpp  Renderer.hpp
sources/: main.cpp
sources/main_project/: Camera.cpp  Ray.cpp  Renderer.cpp
